<resources>
    <!-- Application   -->
    <string name="app_name">POKEMON APP</string>
    <string name="pokemon_logo">Pokemon Logo</string>
    <string name="status_error_message">Can\'t load pokemon information</string>

    <!-- Intro   -->
    <string name="move_search_screen_btn">Go to search screen</string>
    <string name="move_random_screen_btn">Go to random screen</string>
    <string name="navigation_menu">Menu</string>

    <!-- Search   -->
    <string name="search_field_hint">For example: pikachu</string>
    <string name="search_field_error">Wrong query, try again</string>
    <string name="title_tv">Find your pokemon</string>
    <string name="searching_result_tv">Searching result:</string>
    <string name="id_static_tv">Id: </string>
    <string name="name_static_tv">name: </string>
    <string name="height_static_tv">height: </string>
    <string name="weight_static_tv">weight: </string>
    <string name="height_tv">240</string>
    <string name="weight_tv">12</string>
    <string name="id_tv">999</string>
    <string name="name_tv">Pokemon</string>
    <string name="add_to_favorite_btn">Add to favorite</string>

    <!-- Random   -->
    <string name="random_pokemon_btn">Random pokemon</string>

    <!-- Favorite   -->
    <string name="delete_from_favorite_btn">Delete from favorite</string>
    <string name="go_to_favorite_btn">Go to favorite</string>
    <string name="success_added_in_favorite_btn">Successfully added to favorite!</string>
    <string name="success_deleted_from_favorite_btn">Successfully deleted from favorite!</string>
    <string name="delete_error_message">Can\'t delete pokemon from favorite</string>
    <string name="loading_error_message">Can\'t load favorite information</string>
    <string name="appbar_menu_title">Favorites</string>


</resources>