<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    style="@style/Theme.Menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.Menu.TextView.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_menu" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_to_search_screen_btn"
        style="@style/Widget.Menu.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_search_screen_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_to_random_screen_btn"
        style="@style/Widget.Menu.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_random_screen_btn" />
</LinearLayout>