<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_field_et"
        android:filterTouchesWhenObscured="true"
        style="@style/Widget.Search.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/search_field_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_title_tv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/search_title_tv"
        style="@style/Widget.Search.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_field_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/search_field_et"
        app:layout_constraintEnd_toEndOf="@+id/search_field_et"
        app:layout_constraintTop_toTopOf="@+id/search_field_et" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/search_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.Search.TextView"
        android:text="@string/searching_result_tv"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/search_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/search_field_et" />

    <include
        android:id="@+id/search_result_item_layout"
        layout="@layout/search_item_detailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_result_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>